--- a/about_me.html
+++ b/about_me.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="" />
+    <meta name="description" content="Md.Shohel Rana" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
       src="https://kit.fontawesome.com/yourcode.js"
@@ -20,13 +21,13 @@
   <body>
     <!-- Header -->
     <div class="header">
-      <h1>Hello Everyone,welcome here. I am greatful for your valuable time</h1>
+      <h1>&#128508;Hello &#128509; Welcome&#128508;</h1>
       <h3>This is MD.SHOHEL RANA</h3>
 
       <p>
-        &#128512;&#128512; A former professionl cricket player,exploring the
-        universe of IT .In my odyssey ,<br />hope all of you will be my
-        companion and point of reference.Lets explore!&#128512;&#128512;
+        A former professionl cricket player,exploring the universe of IT .In my
+        odyssey ,<br />hope all of you will be my companion and point of
+        reference.Lets explore!
       </p>
     </div>
 
@@ -74,11 +75,7 @@
             </p>
           </div>
           <div class="flip-card-back">
-            <img
-              src="images/icon.png"
-              alt="Avatar"
-              style="width: 300px; height: 370px"
-            />
+            <img src="images/icon.png" alt="Avatar" />
           </div>
         </div>
       </div>
