--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="Md.Shohel Rana" />
+    <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--<Title> tag defines a title for the document -->
     <script
       src="https://kit.fontawesome.com/yourcode.js"
@@ -54,22 +55,31 @@
     </div>
 
     <!-- Contact Form -->
-    <div class="contactForm">
-      <h2>Contact To Get a Quote</h2>
-      <form action="#" method="get">
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname" /><br /><br />
-        <label for="lname">Last name:</label>
-        <input type="text" id="lname" name="lname" /><br /><br />
-        <input type="submit" value="Submit" />
-      </form>
-    </div>
+    <div class="card">
+      <div class="contactForm">
+        <form action="#" method="get" class="contactt_form">
+          <h2 id="title_form">Contact To Get a Quote</h2>
+          <label for="name">Name:</label>
+          <input type="text" id="u_name" name="name" /><br /><br />
+          <label for="email">E-Mail:</label>
+          <input type="text" id="u_email" name="email" /><br /><br />
+          <label for="Mobile">Mobile Number:</label>
+          <input type="tel" id="u_mobile" name="mobile" /><br /><br />
+          <label for="address">Your Address:</label>
+          <input type="text" id="address" name="address" /><br /><br />
+          <label for="subject">Subject:</label>
+          <input type="text" name="subject" /><br /><br />
 
-    <!-- Footer -->
-    <div class="footer">
-      <h2 id="f_item1">Subscribe for Email</h2>
-      <input id="f_item3" type="email" id="sub_email" /><br /><br />
-      <input id="f_item4" type="submit" value="Submit" />
+          <textarea name="comment" rows="12" cols="35">Your Message.</textarea
+          ><br />
+
+          <a href="mailto:shohelcr87@gmail.com"
+            ><input type="submit" value="Submit" id="sub_btn"
+          /></a>
+        </form>
+      </div>
     </div>
+    <!-- Footer -->
+    <div class="footer"></div>
   </body>
 </html>
